--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>主页</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Search</title>
+
+    <!-- bootstrap -->
+    <script src="lib/bootstrap-local/jquery.min.js"></script>
+    <link rel="stylesheet" href="lib/bootstrap-local/bootstrap.css">
+    <script src="lib/bootstrap-local/bootstrap.js"></script>
 </head>
 <body>
-
-这是主页
+    <div class="content">
+        <div id="title">
+            <div class="title-wraper">
+                <p class="title-name-c" style="color: #4285F4">A</p>
+                <p class="title-name-c" style="color: #EA4335;">i</p>
+                <p class="title-name-c" style="color: #FBBC05;">b</p>
+                <p class="title-name-c" style="color: #4285F4">i</p>
+                <p class="title-name-c" style="color: #34A853;">j</p>
+                <p class="title-name-c" style="color: #EA4335;">a</p>
+            </div>
+        </div>
+        <div class="search-bar">
+            <input type="text" id="search-input">
+            <!--<button id="search-btn" class="btn btn-default">search</button>-->
+        </div>
+    </div>
 </body>
+<script src="js/home.js"></script>
+<link rel="stylesheet" href="css/home.css">
 </html>
