--- a/src/main/resources/static/html/searchResult.html
+++ b/src/main/resources/static/html/searchResult.html
@@ -11,15 +11,19 @@
 <body>
     <div class="content">
         <div id="search-result">
-            <div class="abj-card">
-                <div class="abj-thumbnail"></div>
-                <div class="abj-description">
-                    小狗吸尘器家用超静音手持式除螨小型强力地毯式大功率D-526正品 券后99.0元
-                </div>
-                <div class="abj-handle-bar">
-                    <a href="#">详情</a>
-                    <a href="#">购买</a>
-                </div>
+            <!--<div class="abj-card">-->
+                <!--<div class="abj-thumbnail"></div>-->
+                <!--<div class="abj-description">-->
+                    <!--小狗吸尘器家用超静音手持式除螨小型强力地毯式大功率D-526正品 券后99.0元-->
+                <!--</div>-->
+                <!--<div class="abj-handle-bar">-->
+                    <!--<a href="#">详情</a>-->
+                    <!--<a href="#">购买</a>-->
+                <!--</div>-->
+            <!--</div>-->
+            <div id="not-found-div">
+                <img src="/img/panic.png" alt="NOTFOUND">
+                <div>没有搜索结果</div>
             </div>
         </div>
     </div>
