更新一波搜索结果界面🔍

--- a/src/main/resources/static/html/searchResult.html
+++ b/src/main/resources/static/html/searchResult.html
@@ -9,6 +9,9 @@
     <script src="../lib/bootstrap-local/bootstrap.js"></script>
 </head>
 <body>
+    <div class="navigator">
+        <input type="text" id="search_input">
+    </div>
     <div class="content">
         <div id="search-result">
             <!--<div class="abj-card">-->
