1. 改一发前端 2. CommentController 没有提供路由映射，顺便加了一下 3. CommentController 由于判断是否为空的结果是不为空，所以执行不到czq写的mock数据，暂时改为了无论如何都返回mock数据 以上，对这个类有改动的同志注意处理冲突

--- a/src/main/resources/static/html/goodsDetail.html
+++ b/src/main/resources/static/html/goodsDetail.html
@@ -35,7 +35,7 @@
         <hr>
         <div class="comment">
             <div class="panel panel-default">
-                <div class="panel-heading">累计评论：<span class="badge">10086</span></div>
+                <div class="panel-heading">累计评论：<span class="badge" id="comment_count">0</span></div>
                 <div class="panel-body">
                     <div class="comment-container">
 
@@ -48,22 +48,22 @@
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading">匿名用户</h4>
-                                我连评论都是匿名的
+                                稳定占楼
                             </div>
                         </div>
-                        <hr>
-                        <div class="media">
-                            <div class="media-left">
-                                <a href="#">
-                                    <img class="media-object" src="../img/abj-avatar-2.png" alt="...">
-                                </a>
-                                <div class="comment-date" >2017-04-08</div>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">忘了爱</h4>
-                                实名怒怼1楼
-                            </div>
-                        </div>
+                        <!--<hr>-->
+                        <!--<div class="media">-->
+                            <!--<div class="media-left">-->
+                                <!--<a href="#">-->
+                                    <!--<img class="media-object" src="../img/abj-avatar-2.png" alt="...">-->
+                                <!--</a>-->
+                                <!--<div class="comment-date" >2017-04-08</div>-->
+                            <!--</div>-->
+                            <!--<div class="media-body">-->
+                                <!--<h4 class="media-heading">忘了爱</h4>-->
+                                <!--实名怒怼1楼-->
+                            <!--</div>-->
+                        <!--</div>-->
 
                     </div>
                 </div>
